# electrofacies

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
artifacts/tier_1_random_forest_20260401T150610Z/: metadata.json  metrics.json  ood_detector.joblib
artifacts/tier_1_xgboost_20260401T154416Z/: metadata.json  metrics.json  model.joblib  transformer.joblib
artifacts/tier_2_random_forest_20260401T151243Z/: metadata.json  metrics.json  ood_detector.joblib
artifacts/tier_2_xgboost_20260401T151438Z/: metadata.json  metrics.json  model.joblib  transformer.joblib
artifacts/tier_3_random_forest_20260401T151809Z/: metadata.json  metrics.json  transformer.joblib
artifacts/tier_3_xgboost_20260401T151946Z/: config_snapshot.yaml  metadata.json  metrics.json  model.joblib  ood_detector.joblib
artifacts/tier_4_random_forest_20260401T152234Z/: metadata.json  metrics.json  ood_detector.joblib  transformer.joblib
artifacts/tier_4_xgboost_20260401T152359Z/: metadata.json  metrics.json  model.joblib
configs/: default.yaml  facies_schema.yaml  mnemonic_aliases.yaml  model_tiers.yaml  physical_ranges.yaml
data/training/: PDB03_training.xlsx  PDB03_training_ready.xlsx
scripts/: train_pipeline.py
src/electrofacies/: __init__.py  __main__.py  cli.py
src/electrofacies/inference/: __init__.py  batch.py  postprocess.py  predict.py  tier_router.py
src/electrofacies/io/: __init__.py  readers.py  schemas.py  writers.py
src/electrofacies/preprocessing/: __init__.py  features.py  standardize.py  (+2 more)
tests/: conftest.py
(+12 files in other folders)
